package com.rezahdrm.behavioral.state;

public interface RemoteControl {
    void switchState(TV tv);
}
